[package]
name = "Caustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.43.0", path = "../../../../windows-rs/crates/libs/windows", features = ["Win32_Media_MediaFoundation", "Win32_Foundation", "Win32_UI_Shell_PropertiesSystem", "Win32_System", "Win32_Media", "Win32_System_Com"] }
